# tmdriver_ws

./: Anotacoes.txt  Comandos.txt  README.md  X.npy  y.npy
demo/: CMakeLists.txt
demo/scripts/: set_positions_left.py  set_positions_right.py
hand_landmarker_msgs/: CMakeLists.txt  package.xml
hand_landmarker_msgs/msg/: HandLandmarks.msg
hand_landmarker_ros/: package.xml  setup.cfg  setup.py
hand_landmarker_ros/hand_landmarker_ros/: analise  dual_robot_controller.py  hand_landmarker_node.py  hand_landmarks_publisher.py  hand_state_publisher.py  mostra_exemplo  move_delta.py
hand_landmarker_ros/launch/: hand_landmarker_launch.py
hand_landmarker_ros/scripts/: analise  converte_frames  treinar
hand_to_tm/: hand_listener.py  simple_ik_controller.py
py_pubsub/: package.xml  setup.py
py_pubsub/py_pubsub/: publisher_member_function.py
ros2_mediapipe_holistic_ros/: package.xml  setup.cfg  setup.py
ros2_mediapipe_holistic_ros/ros2_mediapipe_holistic_ros/: mediapipe_holistic.py
ros2_mediapipe_holistic_ros_msg/: CMakeLists.txt  package.xml
ros2_mediapipe_holistic_ros_msg/msg/: MediaPipeHolistic.msg
tm_description/urdf/: tm5-700.srdf  tm5700.urdf
tm_description/xacro/: hanoi.xacro  macro.tm5-700-nominal2.urdf.xacro  tm5-700.ros2_control.xacro  tm5-700.srdf  tm5-700.urdf.xacro  tm5-7002.urdf.xacro
tm_moveit_config_tm5-700/config/: initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  ompl_planning.yaml  ros2_controllers.yaml  tm5-700.srdf
tm_moveit_cpp_demo/: CMakeLists.txt
tm_moveit_cpp_demo/config/: controllers.yaml  (+2 more)
(+21 files in other folders)
