<?xml version="1.0"?>
<package format="3">
  <name>hand_landmarker_ros</name>
  <version>0.1.0</version>
  <description>ROS2 node for hand landmark detection using MediaPipe</description>
  <maintainer email="piatan@alunos.utfpr.edu.br">Piatan Sfair Palar</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>hand_landmarker_msgs</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
